<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/Common_text_style"
        android:id="@+id/label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/first_label_s_ru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/groupList"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupList">

        <TextView
            style="@style/Common_text_style"
            android:id="@+id/now"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/now_label" />

        <TextView
            style="@style/Common_text_style"
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time" />
    </LinearLayout>

    <TextView
        style="@style/Common_text_style"
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/status_ru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/time" />

            <TextView
                android:id="@+id/end"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="bottom|center"
                android:text="@string/time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/hse_style_calendar_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/type"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/schedule_type"
                android:textColor="@color/SecondaryHSE"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/schedule_name"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/place"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/schedule_place"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/corp"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/schedule_corp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/teacher"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/schedule_teacher" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/schedule_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:minLines="1"
        android:text="Расписание\nна день"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <Button
        android:id="@+id/schedule_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="Расписание\nна неделю"
        app:layout_constraintStart_toEndOf="@+id/schedule_day"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
</androidx.constraintlayout.widget.ConstraintLayout>